Bug 58376 - EDITING: PAGE FORMAT page layout -> Only right -> CRASH
Summary: EDITING: PAGE FORMAT page layout -> Only right -> CRASH
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta1
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: bibisected40 target:4.1.0 target:4.0....
Keywords: regression
: 57550 (view as bug list)
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2012-12-16 22:37 UTC by m.a.riosv
Modified: 2013-11-16 19:53 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Crash report Mac OSX 10.8.2; LO4.0B1 (52.29 KB, text/plain)
2012-12-16 23:54 UTC, Jorendc
Details
Bibisect output (2.80 KB, text/plain)
2012-12-17 07:27 UTC, Werner
Details
backtrace (2.35 KB, text/plain)
2012-12-17 08:45 UTC, Miklos Vajna
Details
alternative patch (1007 bytes, text/plain)
2012-12-18 11:31 UTC, Werner
Details
Screenshot (136.68 KB, image/png)
2012-12-21 22:04 UTC, m.a.riosv
Details
Screenshot (136.68 KB, image/png)
2012-12-21 22:05 UTC, m.a.riosv
Details
Screenshot with 3 different headers with same page style. (146.48 KB, image/png)
2012-12-21 22:11 UTC, m.a.riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description m.a.riosv 2012-12-16 22:37:26 UTC
Win 7x64 Ultimate
LODev Version 4.0.0.0.beta1 (Build ID: 87906242e87d3ddb2ba9827818f2d1416d80cc7)

Create a new writer file.

Menu/Format/Page/Page Layout - Only right -> Crash LibreOffice.

Editing the page style also leads to crash.
Comment 1 Jorendc 2012-12-16 23:26:49 UTC
Thanks for submitting this bug!

I can reproduce under Mac OSX 10.8.2 with LO 4.0.0.0.beta1 (Build-id: 87906242e87d3ddb2ba9827818f2d1416d80cc7)
TinderBox: MacOSX TDF Release, Branch:libreoffice-4-0, Time: 2012-12-05_22:13:37

I CAN'T reproduce with LO 3.6.4.3 (Build-id: 2ef5aff), so regression.
Comment 2 Jorendc 2012-12-16 23:54:27 UTC
Created attachment 71618 [details]
Crash report Mac OSX 10.8.2; LO4.0B1
Comment 3 Werner 2012-12-17 07:27:22 UTC
Created attachment 71631 [details]
Bibisect output
Comment 4 Miklos Vajna 2012-12-17 08:45:11 UTC
Created attachment 71634 [details]
backtrace

Sounds like related to my SwPageDesc rework, I'll try to look into this.
Comment 5 Björn Michaelsen 2012-12-17 15:37:22 UTC
these are the suspicious commits:
git log d18455e24644a90cbf9f146ea8b4eed74180592b..e9960f36675a025c0536dec30ae56c50f4adecb1 --author vmiklos@suse.cz --pretty=oneline aa7705ef2a359d62201206ce4961547fe9a00422 DocxAttributeOutput: drop unused includes 3ec5db65a7b1dfde8246ed9855716916d6cc468e SwHeaderFooterWin: check if we are on the first page 02a934d03b101ce463a232f9cbb7b43e684de37e SwFrm::OnFirstPage: if there are no previous pages, we are on the first page 751dacec8e0947c2d85187342995822e6dc62912 SvxHFPage: add UI for style::PageProperties::FirstIsShared f3905ac09a6f37615d1335c7d2d50bd00c07b920 ItemSetToPageDesc: don't call SwPageDesc::ChgFirstShare twice 5c19b8701c58fbb49188ce2210879ce6f4431471 ItemSetToPageDesc / PageDescToItemSet: handle first page footers
Comment 6 Miklos Vajna 2012-12-17 17:23:31 UTC
Yes, it's caused by 02a934d03b101ce463a232f9cbb7b43e684de37e, assigning to me.
Comment 7 Not Assigned 2012-12-18 11:07:58 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1b67d91b0065c46ca7b36db0836c9159ca8b50cf

fdo#58376 SwFrm::CheckPageDescs: fix crash on fallback



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 m.a.riosv 2012-12-18 11:22:25 UTC
Thanks Miklos, I'll try to verify.
Comment 9 Werner 2012-12-18 11:31:29 UTC
Created attachment 71721 [details]
alternative patch

The problem is that for the first page the page format remains undefined if no seperate format for the first page is defined. It may be better to move this check to the front in order to include the other checks following (see attached patch).
Comment 10 Not Assigned 2012-12-18 11:55:28 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1c717cbc41174c2e86f649f1045c1d023e9d19a7&g=libreoffice-4-0

fdo#58376 SwFrm::CheckPageDescs: fix crash on fallback


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Not Assigned 2012-12-18 12:06:36 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=159fc90e1692f3cc17261c0db9fec48eb6bef28b

fdo#58376 testcase



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Miklos Vajna 2012-12-18 12:11:12 UTC
Fixed in master and -4-0: marking as resolved.
Comment 13 Miklos Vajna 2012-12-18 12:12:46 UTC
(In reply to comment #9)
> The problem is that for the first page the page format remains undefined if
> no seperate format for the first page is defined. It may be better to move
> this check to the front in order to include the other checks following (see
> attached patch).

Feel free to send a git patch to the mailing list and/or to gerrit (preferably mentioning a use-case where the original fix is not enough) and we'll try to review / push it.

Thanks!
Comment 14 Miklos Vajna 2012-12-18 12:20:56 UTC
Uhm, no, I take it back. Try the following:

1) open a new doc
2) enable header + add "right" to the header
3) add new page
4) enable separate left/right headers
5) add "left" to the second header
6) add third page
7) enable different first header
8) edit first header

With your patch, the header on the third page gets edited as well, which is wrong.
Comment 15 m.a.riosv 2012-12-21 01:51:49 UTC
Confirmed solved in Beta 2.
Version 4.0.0.0.beta2 (Build ID: 4104d660979c57e1160b5135634f732918460a0)
Thanks Miklos.

Hi @Miklos

"With your patch, the header on the third page gets edited as well, which is wrong."

I do not understand, why is wrong if you have set:
 7) enable different first header
What I understand is disable "Same content on first page"
Comment 16 Michael Stahl (allotropia) 2012-12-21 19:46:04 UTC
*** Bug 57550 has been marked as a duplicate of this bug. ***
Comment 17 Miklos Vajna 2012-12-21 19:56:08 UTC
mariosv,

The point of not sharing headers between first and not-first pages is being able to have different headers on these pages. If I edit the first page header and its gets updated on the 3rd page as well (while the checkbox is not checked), the feature is not working.

Miklos
Comment 18 m.a.riosv 2012-12-21 22:04:00 UTC
Created attachment 71950 [details]
Screenshot

Hi Miklos take look to attached screenshot.
Is it how must work?
Comment 19 m.a.riosv 2012-12-21 22:05:44 UTC
Created attachment 71951 [details]
Screenshot

Sorry attached as plain text.
Reattached as png.
Comment 20 m.a.riosv 2012-12-21 22:11:12 UTC
Created attachment 71952 [details]
Screenshot with 3 different headers with same page style.

Sorry again, wrong image attached.
Attached again, I hope the right image.
Comment 21 Miklos Vajna 2012-12-22 15:44:07 UTC
Hi mariosv,

Yes, that looks correct to me. :-)

Miklos