fdo#58376 SwFrm::CheckPageDescs: fix crash on fallback

The problem was that fallback worked like this: if we have no page
style, then right falls back to left, and left falls back to right.
This is no longer enough when 'first' is missing: for odd 'first' pages,
first we should fall back to right.
(cherry picked from commits 1b67d91b0065c46ca7b36db0836c9159ca8b50cf and
5b7810581c573c4406a0e4529193dd3a7871a56c)